[package]
name = "chaser-util"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chaser-util"
path = "src/main.rs"

[profile.dev]
split-debuginfo = "packed"

[profile.release]
split-debuginfo = "packed"

[dependencies]
hyper          = { version = "1.9.0",  features = ["client", "http1"] }
hyper-tls      = "0.6.0"
hyper-util     = { version = "0.1.20", features = ["client", "client-legacy", "client-proxy", "client-proxy-system", "http1", "tokio"] }
http-body-util = "0.1.3"
tower-service  = "0.3.3"
tokio          = { version = "1.51.0", features = ["full"] }
tl             = "0.7.8"
encoding_rs    = "0.8.35"
bytes          = "1.11.1"
http           = "1.4.0"
regex          = "1.12.3"